--- a/src/components/IndexPage/HomeUI.css
+++ b/src/components/IndexPage/HomeUI.css
@@ -38,5 +38,5 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
+  z-index: 1001;
 }
